# Knessight-Utils

./: .env.example  .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
data/cache/: batch_20260215_221436.jsonl  batch_20260215_223548.jsonl  batch_jobs.json  job_status.json  mk_resolution_cache.json
data/client_data/: mks.csv
data/client_data/mk_data/30055/: main.json  התיישבות.csv  נישואים_אזרחיים.csv  תחבורה_ציבורית_בשבת.csv
data/client_data/mk_data/30708/: main.json  התיישבות.csv  נישואים_אזרחיים.csv  תחבורה_ציבורית_בשבת.csv
data/client_data/topics/: התיישבות.json  נישואים_אזרחיים.json  תחבורה_ציבורית_בשבת.json
data/config/: filter_prompt.txt  topic_descriptions.yaml
data/config/scoring_prompts/: התיישבות.txt  נישואים_אזרחיים.txt  תחבורה_ציבורית_בשבת.txt
data/input/: mks.txt  topics.txt
knessight/: __init__.py  __main__.py  cli.py
knessight/modules/: __init__.py  batch_manager.py  config.py  database.py  disambiguation.py  filter_pipeline.py  job_tracker.py  output.py  score_pipeline.py
plan/: structure.txt
tests/: check_batch_results.py  test_db_and_mks.py  test_db_schema.py  test_model_config.py  validate_config.py
